--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onclick="clickListener()">
     <div id="wrapper">
       <div id="logo">
         <h1 id="logo">Key Stroker</h1>
